--- a/0307/양꼬치.md
+++ b/0307/양꼬치.md
@@ -1,1 +1,4 @@
-양꼬치
+
+![Untitled (8)](https://user-images.githubusercontent.com/124108940/225354664-fa93a63b-21da-4b21-bb4f-3a87296a1ead.png)
+![Untitled (9)](https://user-images.githubusercontent.com/124108940/225354687-0b41b402-bab1-4559-a2e0-f6b3e1c6bdfc.png)
+![Untitled (10)](https://user-images.githubusercontent.com/124108940/225354699-fefc2242-58d5-4db8-a055-7f697968593b.png)
