--- a/0307/배열의 평균값.md
+++ b/0307/배열의 평균값.md
@@ -1,1 +1,4 @@
-배열의 평균값
+
+![Untitled (8)](https://user-images.githubusercontent.com/124108940/225355132-f8d9da4f-3474-4728-bbfd-6060bf056532.png)
+![Untitled (9)](https://user-images.githubusercontent.com/124108940/225355143-85efb9a4-b8f4-4e01-a37e-bc1cbcf490e9.png)
+![Untitled (10)](https://user-images.githubusercontent.com/124108940/225355159-59c86489-73c6-4a20-9b01-a1b286e3ba1b.png)
