--- a/0317/세균 증식.md
+++ b/0317/세균 증식.md
@@ -3,3 +3,4 @@ def dirty(n, t):
  #시간마다 2배씩 증가하므로 for문을 사용하였다
 n = n \* 2
 return n
+![세균증식](https://user-images.githubusercontent.com/124108940/225914770-a35687f2-a772-4e48-8aa4-7f9542106199.PNG)
