--- a/0317/중앙값 구하기.md
+++ b/0317/중앙값 구하기.md
@@ -1,3 +1,4 @@
 def solution(array):
 return sorted(array)[len(array) // 2]
 #array 배열을 정렬한 그 배열을 2로 나눈 몫으로 중앙값이 나온다.
+![중앙값](https://user-images.githubusercontent.com/124108940/225914877-d124fc3e-7220-42b3-ab2b-69ce93229288.PNG)
