--- a/0319/머쓱이 키.md
+++ b/0319/머쓱이 키.md
@@ -4,3 +4,4 @@ for i in array : //array배열에서 i를 추출하여
 if i > height : //height보다 i가 클 때만
 answer += 1 //answer에 1을 추가 시킨다.
 return answer
+![머쓱이](https://user-images.githubusercontent.com/124108940/226176218-5f634a3f-6db7-498b-b77d-283a2b74252f.PNG)
