--- a/0319/문자열 뒤집기 .md
+++ b/0319/문자열 뒤집기 .md
@@ -1,2 +1,3 @@
 def strChange(my_string):
 return my_string[::-1] //배열의 역순을 리턴한다.
+![문자열 뒤집기](https://user-images.githubusercontent.com/124108940/226176254-ea9ab033-7d05-49a4-8990-d04b0841e287.PNG)
