--- a/0319/배열 뒤집기.md
+++ b/0319/배열 뒤집기.md
@@ -1,2 +1,3 @@
 def change(num_list):
 return num_list[::-1] //num_list의 원소를 역순으로 배열한다.
+![배열 뒤집기](https://user-images.githubusercontent.com/124108940/226176298-9cb9784a-482f-4fed-a903-0bb794392684.PNG)
