--- a/0319/배열의 원소길이.md
+++ b/0319/배열의 원소길이.md
@@ -3,3 +3,4 @@ lenList = [] //lenList 리스트를 선언한다
 for i in strlist: //strlist에 있는 원소 중에서
 lenList.append(len(i)) //원소의 글자 개수를 리스트로 하는 lenList에 추가한다.
 return lenList //lenList를 리턴한다
+![배열의 원소 길이 구하기](https://user-images.githubusercontent.com/124108940/226176410-07967839-d000-4021-b199-689991a40b45.PNG)
