Update 약수 구하기 .md

--- a/0319/약수 구하기 .md
+++ b/0319/약수 구하기 .md
@@ -8,3 +8,4 @@ div = [] //div라는 리스트 선언한다.
             div.append(i)   //div리스트에 i를 추가한다.
 
     return len(div)  //div리스트의 개수를 구한다.
+![약수 구하기](https://user-images.githubusercontent.com/124108940/226176438-d645738f-985d-462d-94b9-a2ead5269b77.PNG)
