Update 피자 나눠 먹기 (3).md

--- a/0319/피자 나눠 먹기 (3).md
+++ b/0319/피자 나눠 먹기 (3).md
@@ -5,3 +5,4 @@ answer = (n // slice) + 1 #answer는 n을 slice로 나눈 몫에서 +1해준다
 elif n % slice == 0 : #n을 slice로 나누었을때 나머지가 0이면
 answer = (n // slice) #answer는 n을 slice로 나눈 몫이다.
 return answer #answer를 리턴한다.
+![피자 나눠먹기](https://user-images.githubusercontent.com/124108940/226176467-a7b1aaba-29c1-45a5-9bc9-ef36af3e3a5f.PNG)
