--- a/0320/배열 자르기.md
+++ b/0320/배열 자르기.md
@@ -2,3 +2,4 @@ def solution(numbers, num1, num2):
  return numbers[num1:num2+1]  
  //numbers 리스트에서 num1에서 num2까지의 원소를 나타내려면 [시작:끝:증감]으로
 //numbers[num1:num2+1]를 리턴한다.
+![배열자르기](https://user-images.githubusercontent.com/124108940/226319216-1cc0e20c-11b2-48f9-8b93-114a8c8c3dbe.PNG)
