--- a/0320/특정문자 제거하기.md
+++ b/0320/특정문자 제거하기.md
@@ -4,3 +4,4 @@ answer = []
 if i != letter: #i가 letter가 아닐 때
 answer.append(i) #i를 answer리스트에 추가한다
 return ''.join(answer) #공백없이 원소들을 합쳐준다.
+![특정문자 제거하기](https://user-images.githubusercontent.com/124108940/226319330-be68ec8d-f8f5-4027-85ec-3f084f634ef2.PNG)
