Update 문자열 안에 문자열.md

--- a/0321/문자열 안에 문자열.md
+++ b/0321/문자열 안에 문자열.md
@@ -4,3 +4,4 @@ if str2 in str1: #str1안에 str2가 있다면
 answer = 1 #answer는 1이다.
 else : answer = 2 #아니면 answer는 2이다.
 return answer #answer를 리턴한다.
+![문자열 안에 문자열](https://user-images.githubusercontent.com/124108940/226488603-306f37b1-4b0b-46ee-9ae3-dd77f96d5ee3.PNG)
