Update 숨어있는 숫자 더하기(1).md

--- a/0321/숨어있는 숫자 더하기(1).md
+++ b/0321/숨어있는 숫자 더하기(1).md
@@ -4,3 +4,4 @@ for i in my_string: #문자열을 하나씩 i로 받아와서
 if i.isnumeric(): #i가 숫자형태의 문자열이면
 answer += int(i) #i를 인트화하여 더하여준다
 return answer
+![숨어있는 숫자 덧셈(1)](https://user-images.githubusercontent.com/124108940/226488657-62a337ee-a4f5-419f-91f4-b524aab874c8.PNG)
