--- a/0321/자릿수 더하기.md
+++ b/0321/자릿수 더하기.md
@@ -3,3 +3,4 @@ answer = 0
 for i in str(n): #파라미터로 주어진 n을 문자열화 하여서 i로 하나씩 가져와서
 answer += int(i) #i를 정수화 하여 answer에 더하여 준다
 return answer #answer를 리턴한다.
+![자릿수 더하기](https://user-images.githubusercontent.com/124108940/226488692-96351695-a6bd-45e0-888c-51e21ae5b506.PNG)
