Update 배열 회전시키기 .md

--- a/0326/배열 회전시키기 .md
+++ b/0326/배열 회전시키기 .md
@@ -15,3 +15,4 @@ answer.append(i) //i를 answer배열에 추가한다.
 answer.append(numbers[0])
 
     return answer
+![배열 회전시키기](https://user-images.githubusercontent.com/124108940/227778785-2a5e6305-c5fc-406d-bf01-6e0f2102a870.PNG)
