--- a/0326/소인수분해.md
+++ b/0326/소인수분해.md
@@ -9,3 +9,4 @@ n //= x //다시 n을 x로 나누었을때 나오는 몫으로 초기화한다.
 else: x+=1 //n이 x로 나누어 떨어지지 않으면 x에 1 더한다.
 
     return answer
+![소인수분ㄴ해](https://user-images.githubusercontent.com/124108940/227778828-4808faac-98c1-46ec-8b64-4c32c114d8e1.PNG)
