--- a/0323/숫자찾기.md
+++ b/0323/숫자찾기.md
@@ -5,3 +5,4 @@ for i in range(len(a)): # a의 길이에 반복하여 꺼낸 i중에서
 if int(a[i]) == k: #a의 리스트 중에서 i번째의 문자를 인트화하여 k와 같으면
 return i+1 #그 자리수를 리턴하여야 하기 때문에 i에 +1을 한다.
 return answer
+![숫자찾기](https://user-images.githubusercontent.com/124108940/227780597-217fba2c-a140-427a-8bce-90692daf6e23.PNG)
