--- a/0323/최댓값 만들기.md
+++ b/0323/최댓값 만들기.md
@@ -3,3 +3,4 @@ answer = 0
 numbers.sort() #원소중에 두 수를 곱하여 최댓값을 만들려면 정렬하여
 answer = max(numbers[0]*numbers[1], numbers[-1]*numbers[-2]) #첫번째,두번째 있는 수의 곱과 제일 끝과 끝쪽보다 한칸 앞에있는 숫자의 곱 중에서 최댓값을 answer에 담는다  
  return answer
+![최댓값 만들기](https://user-images.githubusercontent.com/124108940/227780614-19ec8e20-2781-4e4e-a234-701db7431773.PNG)
