--- a/0322/대문자와 소문자.md
+++ b/0322/대문자와 소문자.md
@@ -6,3 +6,4 @@ answer.append(i.upper()) //answer리스트에 대문자화하여 추가한다.
 else: //my_string에서 하나씩 뽑은 i가 대문자이면
 answer.append(i.lower()) //answer리스트에 소문자화하여 추가한다.
 return ''.join(answer) //answer를 공백없이 리턴한다.
+![대문자와 소문자](https://user-images.githubusercontent.com/124108940/227780713-5f7a342a-bbcc-41d0-b9a8-eb027803d605.PNG)
