--- a/0322/문자열 정리하기.md
+++ b/0322/문자열 정리하기.md
@@ -5,3 +5,4 @@ if i.isnumeric(): // i가 숫자이면
 answer.append(int(i)) // 인트화한 i를 answer에 추가한다.
 answer.sort() //answer 리스트를 오름차순 정렬한다.
 return answer //answer를 리턴한다.
+![문자열 정리하기(1)](https://user-images.githubusercontent.com/124108940/227780964-a93451bf-caf7-4115-9bf2-d0e1881be6dd.PNG)
