--- a/0322/문자열 정리하기(2).md
+++ b/0322/문자열 정리하기(2).md
@@ -5,3 +5,4 @@ for i in string: //string의 원소 하나씩 i를
 answer.append(i) //answer에 추가한다.
 answer.sort() //answer를 오름차순한다.
 return ''.join(answer) //answer를 공백없이 리턴한다.
+![문자열 정리하기(2)](https://user-images.githubusercontent.com/124108940/227780982-198eaffd-b73f-4d42-8680-8e8db8018d56.PNG)
