Update 약수구하기 .md

--- a/0329/약수구하기 .md
+++ b/0329/약수구하기 .md
@@ -5,3 +5,4 @@ def solution(n):  #정수n의 약수를 구하는 문제
         if n % i == 0:   #그 i를 n으로 나누었을 때 나머지가 0이면
             answer.append(i)   #i를 answer배열에 추가한다.
     return answer
+    ![약수 구하기](https://user-images.githubusercontent.com/124108940/228391270-2d991249-857f-401c-b4bc-30c9ebde3f9c.PNG)
