--- a/0329/주사위 개수.md
+++ b/0329/주사위 개수.md
@@ -9,3 +9,4 @@ def solution(box, n):
     #box[0],box[1],box[2]를 각각 int화 하여 n으로 나눠 나오는 몫을 구하여 각각 곱해준다
     answer = (int(box[0] // n))* (int(box[1] // n))*(int(box[2] // n))
     return answer
+    ![주사위개수](https://user-images.githubusercontent.com/124108940/228391317-091ab34c-18cc-4e3d-9cf3-ad3f0e0eef71.PNG)
