--- a/0328/7의배수.md
+++ b/0328/7의배수.md
@@ -3,3 +3,4 @@ def solution(array):
     for i in array:   //array배열에 하나씩 i를 빼서
         answer+=str(i)    //문자열화 된 i를 answer배열에 더한다. 
     return answer.count("7")   //answer배열에 "7"의 개수를 리턴한다.
+    ![7의배수](https://user-images.githubusercontent.com/124108940/228692287-20b258ba-26b0-4521-a5c2-ebecbc2aaaf5.PNG)
