Update 중복된 문자 제거.md

--- a/0328/중복된 문자 제거.md
+++ b/0328/중복된 문자 제거.md
@@ -4,3 +4,4 @@ def solution(my_string):
         if i not in answer:  //i가 answer배열에 없으면 
             answer+=i   //answer에 더해준다.
     return ''.join(answer)   //공백없이 합쳐준다.
+    ![중복된 문자 제거](https://user-images.githubusercontent.com/124108940/228692347-5e0f082a-776b-412e-b37f-b6dce989e9eb.PNG)
